# fashion

./: .cursorignore  .gitignore  AGENTS.md  POWERSHELL_OUTPUT_FIX.md  README.md  VUE3_TS_TUTORIAL.md  WARDROBE_VUE_INTERVIEW_QUESTIONS.md  install_cursor_cli.ps1  pyproject.toml  quick_fix.ps1  start-dev.ps1  start-dev.sh  工作业绩描述_OA系统.md  要求.txt
.cursor/: mcp.json
cloudflare-blog/: .gitignore  (+11 more)
fashion_rec/backend/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  INSTALL_GOOGLE_API_DEPS.md  LV_PRODUCTS_README.md  R2_CONFIG_NOTES.md  SETUP_V2_SECRETS.md  auth.py  client_secret_729541469608-idf9oamqmk1pg81tl7akt7vns94da57a.apps.googleusercontent.com.json  download_model.py  favorites.json  fly.toml  fly.v2.toml  iroh-relay.toml  looks.json  main.py  pyproject.toml  requirements.txt  run.py  setup_fal_key.ps1  setup_locateanything_fly.ps1  setup_model_profiles_table.py  setup_model_scope_tables.py  setup_subscription_table.py  setup_v2_secrets.ps1  start.txt  verify_and_redeploy_v2.ps1
fashion_rec/backend/config/: iroh-relay.toml
fashion_rec/backend/migrations/: 005_add_model_id_scope_columns.sql  README.md  run_migration.py
fashion_rec/backend/scripts/: fly-start.sh
fashion_rec/backend/services/: chatkit_attachment_store.py  chatkit_fashion_agent.py  chatkit_fashion_server.py  chatkit_garment_subagent.py  chatkit_memory_store.py  chatkit_orchestration.py  chatkit_outfit_context.py  chatkit_session_api.py  chatkit_sqlite_store.py  chatkit_store_factory.py  chatkit_thread_converter.py  chatkit_tools.py  credentials_manager.py  dashscope_openai_client.py  fal_multi_angle.py  favorites.py  garment_vl_pipeline.py  guest_quota.py  locateanything_client.py  looks.py  lv_products_db.py  lv_scraper.py  model_profiles.py  multiangle_history.py  outfit_agent.py  qwen_image_edit.py  recognition.py  search_console.py  search_console_db.py  storage.py  subscription.py.deprecated  supabase_client.py  thumbnail_service.py  try_on.py  tryon_history.py  user_images.py  vector_db.py  vv.jsom  xai_openai_client.py  xai_responses.py  (+1 more)
fashion_rec/backend/subscription-service/: .gitignore  .npmrc  BILLING_PERIOD_LOGIC.md  CARD_KEYS_MIGRATION.md  MIGRATION_GUIDE.md  README.md  TROUBLESHOOTING.md  WEBHOOK.md  add-period-end.sql  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-customers.ts  test-subscription-update.md  test-write-instructions.md  tsconfig.json  wrangler.toml
fashion_rec/backend/subscription-service/scripts/: generate-card-key-txt.mjs
fashion_rec/backend/subscription-service/sql/: card-keys.sql
fashion_rec/backend/subscription-service/src/: card-key-service.ts  index.ts  migrate-fill-period-end.ts  migrate-period-end.ts  plan-config.ts  subscription-service.ts
fashion_rec/backend/tests/: test_locateanything_client.py
(+376 files in other folders)
