[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "YIDEA"
version = "0.1.0"
description = "LangChain-based DeepAgent integrating DeepSeek LLM with a FLUX outfitting tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.2.11",
    "langchain-openai>=0.1.14",
    "langchain-community>=0.2.8",
    "deepagents>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

