[project]
name = "fashion-rec-backend"
version = "0.1.0"
description = "Fashion Recommendation Backend API with image recognition and vector search"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "python-dotenv",
    "langchain-openai",
    "langchain-core",
    "chromadb",
    "sentence-transformers",
    "pillow",
    "boto3",
    "PyJWT",
    "cryptography",
    "supabase",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

