[project]
name = "fashion-rec-backend"
version = "0.1.0"
description = "Fashion Recommendation Backend API with image recognition and vector search"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "python-dotenv",
    "langchain-openai",
    "langchain-core",
    "sentence-transformers",
    "pillow",
    "boto3>=1.42.0",
    "PyJWT",
    "cryptography",
    "supabase",
    "httpx",
    "requests",
    "beautifulsoup4",
    "psycopg2-binary>=2.9.11",
    "python-certifi-win32>=1.6.1",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.1.0",
    "cryptography>=41.0.0",
    "fal-client>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

